--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ body {
 .form-container {
   background: #fff;
   width: 300px;
-  height: 400px;
+  height: 550px;
   position: relative;
   text-align: center;
   padding: 20px 0;
@@ -93,6 +93,7 @@ body {
 }
 .form-btn {
   display: inline-block;
+  margin-top: 50px;
 }
 .form-container form {
   max-width: 300px;
@@ -120,9 +121,11 @@ form .btn:focus {
 }
 #LoginForm {
   left: -300px;
+  margin-top: 150px;
 }
 #RegForm {
   left: 0;
+  margin-top: 150px;
 }
 form a {
   font-size: 12px;
@@ -212,4 +215,13 @@ form a {
   100% {
     transform: rotate(360deg);
   }
+}
+
+/*Avatar Icon*/
+.avatar {
+  vertical-align: middle;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  margin-top: 30px;
 }
